added images folder and menu icon

--- a/app1.html
+++ b/app1.html
@@ -14,6 +14,7 @@
 		<div class="container">
 			<div id="navbar">
 				<div id="sidebar-button">
+					<img src="images/icons/menubars.png" style="height:30px; width: 30px">
 				</div>
 				<div id="titleBar">
 				</div>
