--- a/app1.html
+++ b/app1.html
@@ -13,12 +13,16 @@
 	<div id="mainContent">
 		<div class="container">
 			<div id="navbar">
-				<div id="sidebar-button">
+				<div id="sideBar-button">
 					<img src="images/icons/menubars.png" style="height:30px; width: 30px">
 				</div>
 				<div id="titleBar">
+					<h1>
+						Alexander
+					</h1>
 				</div>
 				<div id="actionMenu">
+					<img src="images/icons/addbutton.png" style="height: 30px; width: 30px;">
 				</div>
 			</div>
 			<div id="content">
