adjusted navbar sizes

--- a/app1.html
+++ b/app1.html
@@ -12,9 +12,9 @@
 <div id="absoluteContainer">
 	<div id="mainContent">
 		<div class="container">
-			<div id="navbar">
+			<div id="navbar col-sm-6 col-sm-offset-3">
 				<div id="sideBar-button">
-					<img src="images/icons/menubars.png" style="height:30px; width: 30px">
+					<img src="images/icons/menubars.png" style="height:130px; width:130px;">
 				</div>
 				<div id="titleBar">
 					<h1>
@@ -22,7 +22,7 @@
 					</h1>
 				</div>
 				<div id="actionMenu">
-					<img src="images/icons/addbutton.png" style="height: 30px; width: 30px;">
+					<img src="images/icons/addbutton.png" style="height:130px; width:130px;">
 				</div>
 			</div>
 			<div id="content">
