--- a/app1.html
+++ b/app1.html
@@ -30,6 +30,8 @@
 		</div>
 	</div>
 	<div id="sideBar">
+		<div id="sideblur">
+		</div>
 		<div class="container">
 			<div id="sideHeader">
 			</div>
