adjusted sideBlur and z-indexes

--- a/app1.html
+++ b/app1.html
@@ -30,19 +30,34 @@
 		</div>
 	</div>
 	<div id="sideBar">
-		<div id="sideblur">
-		</div>
 		<div class="container">
 			<div id="sideHeader">
+				<h1 style="color: white">
+					Header
+				</h1>
 			</div>
 			<div id="sideContentOne">
+				<h1 style="color: white">
+					Content
+				</h1>
 			</div>
 			<div id="sideContentTwo">
+				<h1 style="color: white">
+					Content
+				</h1>
 			</div>
 			<div id="sideContentThree">
+				<h1 style="color: white">
+					Content
+				</h1>
 			</div>
 			<div id="footerBar">
+				<h1 style="color: white">
+					Footer
+				</h1>
 			</div>
+		</div>
+		<div id="sideBlur">
 		</div>
 	</div>
 </div>
