--- a/app1.html
+++ b/app1.html
@@ -29,11 +29,12 @@
 			</div>
 		</div>
 	</div>
+
 	<div id="sideBar">
 		<div class="container">
 			<div id="sideHeader">
-				<h1 style="color: white">
-					Header
+				<h1>
+					Designers
 				</h1>
 			</div>
 			<div id="sideContentOne">
@@ -42,11 +43,6 @@
 				</h1>
 			</div>
 			<div id="sideContentTwo">
-				<h1 style="color: white">
-					Content
-				</h1>
-			</div>
-			<div id="sideContentThree">
 				<h1 style="color: white">
 					Content
 				</h1>
