removed overflow:scroll, increased background image brightness, positioned content title bars and background opacity

--- a/app1.html
+++ b/app1.html
@@ -38,19 +38,19 @@
 				</h1>
 			</div>
 			<div id="sideContentOne">
-				<h1 style="color: white">
-					Content
-				</h1>
+				<h2 class="contentTitle">
+					Members
+				</h2>
 			</div>
 			<div id="sideContentTwo">
-				<h1 style="color: white">
-					Content
-				</h1>
+				<h2 class="contentTitle">
+					Recent Clusters
+				</h2>
 			</div>
 			<div id="footerBar">
-				<h1 style="color: white">
-					Footer
-				</h1>
+				<h2 class="contentTitle">
+					Preferences
+				</h2>
 			</div>
 		</div>
 		<div id="sideBlur">
