--- a/app1.html
+++ b/app1.html
@@ -33,7 +33,9 @@
 	<div id="sideBar">
 		<div class="container">
 			<div id="sideHeader">
-				<img src="images/icons/cornerlogo.png">
+				<div id="sideBarLogo">
+					<img src="images/icons/cornerlogo.png">
+				</div>
 				<h1>
 					Designers
 				</h1>
