--- a/app1.html
+++ b/app1.html
@@ -4,6 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="javascript/jquery-2.2.0.js"></script>
+	<script type="text/javascript" src="javascript/javascript.js"></script>
 
 	<title></title>
 </head>
