updated README, started work on members section.

--- a/app1.html
+++ b/app1.html
@@ -42,10 +42,33 @@
 				Designers
 				</h1>
 			</div>
-			<div id="sideContentOne">
-				<h2 class="contentTitle">
+			<h2 class="contentTitle">
 					Members
 				</h2>
+			<div id="sideContentOne">
+				<div class="contentContainer">
+					<div class="memberBlock">
+						<img src="images/profiles/me.png">
+						<h3>Name Here</h3>
+					</div>
+					<div class="memberBlock">
+						<img src="#">
+						<h3>Name Here</h3>
+					</div>
+					<div class="memberBlock">
+						<img src="#">
+						<h3>Name Here</h3>
+					</div>
+					<br />
+					<div class="memberBlock">
+						<img src="#">
+						<h3>Name Here</h3>
+					</div>
+					<div class="memberBlock">
+						<img src="#">
+						<h3>Name Here</h3>
+					</div>
+				</div>
 			</div>
 			<div id="sideContentTwo">
 				<h2 class="contentTitle">
