finished members section

--- a/app1.html
+++ b/app1.html
@@ -49,24 +49,29 @@
 				<div class="contentContainer">
 					<div class="memberBlock">
 						<img src="images/profiles/me.png">
-						<h3>Name Here</h3>
+						<h3 class="memberName">
+							Alexander
+						</h3>
 					</div>
 					<div class="memberBlock">
-						<img src="#">
-						<h3>Name Here</h3>
+						<img src="images/profiles/random1.png">
+						<h3 class="memberName">Kimberly</h3>
 					</div>
 					<div class="memberBlock">
-						<img src="#">
-						<h3>Name Here</h3>
+						<img src="images/profiles/random3.png">
+						<h3 class="memberName">Caroline</h3>
 					</div>
 					<br />
 					<div class="memberBlock">
-						<img src="#">
-						<h3>Name Here</h3>
+						<img src="images/profiles/random2.png">
+						<h3 class="memberName">Ralph N.</h3>
 					</div>
 					<div class="memberBlock">
-						<img src="#">
-						<h3>Name Here</h3>
+						<img src="images/profiles/random4.png">
+						<h3 class="memberName">Adam B.</h3>
+					</div>
+					<div class="memberBlock memberAdd">
+						<img src="images/icons/plusIcon.png">						
 					</div>
 				</div>
 			</div>
