Completed Recent Clusters section, added new buttons

--- a/app1.html
+++ b/app1.html
@@ -14,21 +14,20 @@
 <div id="absoluteContainer">
 	<div id="mainContent">
 		<div class="container">
-			<div id="navbar col-sm-6 col-sm-offset-3">
-				<div id="sideBar-button">
-					<img src="images/icons/menubars.png" style="height:130px; width:130px;">
-				</div>
-				<div id="titleBar">
-					<h1>
-						Alexander
-					</h1>
-				</div>
-				<div id="actionMenu">
-					<img src="images/icons/addbutton.png" style="height:130px; width:130px;">
-				</div>
+			<div id="sideBar-button">
+				<img src="images/icons/openArrow.png">
 			</div>
-			<div id="content">
+			<div id="titleBar">
+				<h1>
+					Alexander
+				</h1>
 			</div>
+			<div id="actionMenu">
+				<img src="images/icons/addIcon.png">
+			</div>
+		</div>
+		<div id="content">
+
 		</div>
 	</div>
 
@@ -75,10 +74,42 @@
 					</div>
 				</div>
 			</div>
-			<div id="sideContentTwo">
-				<h2 class="contentTitle">
+			<h2 class="contentTitle">
 					Recent Clusters
-				</h2>
+			</h2>
+			<div id="sideContentTwo">
+				<div class="contentContainer">
+					<div class="clusterBlock">
+						<div class="holder">
+							<img src="images/icons/finance.png">
+							<h3>Finances</h3>
+						</div>
+					</div>
+					<div class="clusterBlock">
+						<div class="holder">
+							<img src="images/icons/dataBars.png">
+							<h3>Data Guys</h3>
+						</div>
+					</div>
+					<div class="clusterBlock">
+						<div class="holder">
+							<img src="images/icons/wine.png">
+							<h3>Weekenders</h3>
+						</div>
+					</div>
+					<div class="clusterBlock">
+						<div class="holder">
+							<img src="images/icons/engineers.png">
+							<h3>Engineers</h3>
+						</div>
+					</div>
+					<div class="clusterBlock">
+						<div class="holder">
+							<img src="images/icons/abacus.png">
+							<h3>Geek Squad</h3>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div id="footerBar">
 				<h2 class="contentTitle">
