--- a/app1.html
+++ b/app1.html
@@ -14,16 +14,18 @@
 <div id="absoluteContainer">
 	<div id="mainContent">
 		<div class="container">
-			<div id="sideBar-button">
-				<img src="images/icons/openArrow.png">
-			</div>
-			<div id="titleBar">
-				<h1>
-					Alexander
-				</h1>
-			</div>
-			<div id="actionMenu">
-				<img src="images/icons/addIcon.png">
+			<div id="head">
+				<div id="sideBar-button">
+					<img src="images/icons/openArrow.png">
+				</div>
+				<div id="titleBar">
+					<h1>
+						Alexander
+					</h1>
+				</div>
+				<div id="actionMenu">
+					<img src="images/icons/addIcon.png">
+				</div>
 			</div>
 		</div>
 		<div id="content">
