changed preferences section to navigation, added buttons

--- a/app1.html
+++ b/app1.html
@@ -113,13 +113,38 @@
 					</div>
 				</div>
 			</div>
-			<div id="footerBar">
-				<h2 class="contentTitle">
-					Preferences
+			<h2 class="contentTitle">
+					Navigation
 				</h2>
+			<div id="nav">
+				<div class="contentContainer">
+					<div class="navButton">
+						<img src="images/icons/navButtons/homeButton.png">
+						<span>Home</span>
+					</div>
+					<div class="navButton">
+						<img src="images/icons/navButtons/profileButton.png">
+						<span>Profile</span>
+					</div>
+					<div class="navButton">
+						<img src="images/icons/navButtons/clusterButton.png">
+						<span>Clusters</span>
+					</div>
+					<br/>
+					<div class="navButton">
+						<img src="images/icons/navButtons/messagesButton.png">
+						<span>Messages</span>
+					</div>
+					<div class="navButton">
+						<img src="images/icons/navButtons/friendsButton.png">
+						<span>Friends</span>
+					</div>
+					<div class="navButton">
+						<img src="images/icons/navButtons/settingsButton.png">
+						<span>Settings</span>
+					</div>
+				</div>
 			</div>
-		</div>
-		<div id="sideBlur">
 		</div>
 	</div>
 </div>
