added css and html for member section to view profile or remove member

--- a/app1.html
+++ b/app1.html
@@ -48,28 +48,38 @@
 				</h2>
 			<div id="sideContentOne">
 				<div class="contentContainer">
-					<div class="memberBlock">
-						<img src="images/profiles/me.png">
+					<div class="memberBlock memberOpen">
+						<img class="delete" src="images/icons/removeContact.png">
+						<img class="viewProfile" src="images/icons/profileView.png">
+						<img class="profilePic" src="images/profiles/me.png">
 						<h3 class="memberName">
 							Alexander
 						</h3>
 					</div>
 					<div class="memberBlock">
-						<img src="images/profiles/random1.png">
-						<h3 class="memberName">Kimberly</h3>
+						<img class="profilePic" src="images/profiles/random1.png">
+						<h3 class="memberName">
+							Kimberly
+						</h3>
 					</div>
 					<div class="memberBlock">
-						<img src="images/profiles/random3.png">
-						<h3 class="memberName">Caroline</h3>
+						<img class="profilePic" src="images/profiles/random3.png">
+						<h3 class="memberName">
+							Caroline
+						</h3>
 					</div>
 					<br />
 					<div class="memberBlock">
-						<img src="images/profiles/random2.png">
-						<h3 class="memberName">Ralph N.</h3>
+						<img class="profilePic" src="images/profiles/random2.png">
+						<h3 class="memberName">
+							Ralph N.
+						</h3>
 					</div>
 					<div class="memberBlock">
-						<img src="images/profiles/random4.png">
-						<h3 class="memberName">Adam B.</h3>
+						<img class="profilePic" src="images/profiles/random4.png">
+						<h3 class="memberName">
+							Adam B.
+						</h3>
 					</div>
 					<div class="memberBlock memberAdd">
 						<img src="images/icons/plusIcon.png">						
