added javascript to make the members section responsize

--- a/app1.html
+++ b/app1.html
@@ -15,9 +15,6 @@
 	<div id="mainContent">
 		<div class="container">
 			<div id="head">
-				<div id="sideBar-button">
-					<img src="images/icons/openArrow.png">
-				</div>
 				<div id="titleBar">
 					<h1>
 						Alexander
@@ -48,7 +45,7 @@
 				</h2>
 			<div id="sideContentOne">
 				<div class="contentContainer">
-					<div class="memberBlock memberOpen">
+					<div id="1" class="memberBlock">
 						<img class="delete" src="images/icons/removeContact.png">
 						<img class="viewProfile" src="images/icons/profileView.png">
 						<img class="profilePic" src="images/profiles/me.png">
@@ -56,26 +53,34 @@
 							Alexander
 						</h3>
 					</div>
-					<div class="memberBlock">
+					<div id="2" class="memberBlock">
+						<img class="delete" src="images/icons/removeContact.png">
+						<img class="viewProfile" src="images/icons/profileView.png">
 						<img class="profilePic" src="images/profiles/random1.png">
 						<h3 class="memberName">
 							Kimberly
 						</h3>
 					</div>
-					<div class="memberBlock">
+					<div id="3" class="memberBlock">
+						<img class="delete" src="images/icons/removeContact.png">
+						<img class="viewProfile" src="images/icons/profileView.png">
 						<img class="profilePic" src="images/profiles/random3.png">
 						<h3 class="memberName">
 							Caroline
 						</h3>
 					</div>
 					<br />
-					<div class="memberBlock">
+					<div id="4" class="memberBlock">
+						<img class="delete" src="images/icons/removeContact.png">
+						<img class="viewProfile" src="images/icons/profileView.png">
 						<img class="profilePic" src="images/profiles/random2.png">
 						<h3 class="memberName">
 							Ralph N.
 						</h3>
 					</div>
-					<div class="memberBlock">
+					<div id="5" class="memberBlock">
+						<img class="delete" src="images/icons/removeContact.png">
+						<img class="viewProfile" src="images/icons/profileView.png">	
 						<img class="profilePic" src="images/profiles/random4.png">
 						<h3 class="memberName">
 							Adam B.
@@ -155,6 +160,9 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div id="sideBar-button">
+			<img src="images/icons/openArrow.png">
 		</div>
 	</div>
 </div>
